--- a/src/templates/admin/editor-dashboard.html
+++ b/src/templates/admin/editor-dashboard.html
@@ -14,7 +14,7 @@
     <!-- Summernote Editor -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_admin.css') }}">
 </head>
 <body>
     <!-- Sidebar -->
@@ -486,7 +486,7 @@
     
     <!-- Summernote -->
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
-    
-    <script src="editor.js"></script>
+
+    <script src="{{ url_for('static', filename='js/editor.js') }}"></script>
 </body>
 </html>
