--- a/src/templates/admin/menu-manager.html
+++ b/src/templates/admin/menu-manager.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_admin.css') }}">
 </head>
 <body>
     <!-- Sidebar -->
@@ -206,15 +206,14 @@
     </div>
 
     <!-- Menu Manager Script -->
-    <script src="../client/menu-manager.js"></script>
+    <script src="{{ url_for('static', filename='js/menu-manager.js') }}"></script>
     
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script src="menu-admin.js"></script>
+    <script src="{{ url_for('static', filename='js/menu-admin.js') }}"></script>
     
     <style>
         .menu-tree {
