--- a/src/templates/client/debug-menu.html
+++ b/src/templates/client/debug-menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug Menu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
 </head>
 <body>
     <h2 style="padding: 20px;">Debug Menu - Check Console (F12)</h2>
@@ -36,7 +36,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     <!-- Menu Manager -->
-    <script src="menu-manager.js"></script>
+    <script src="{{ url_for('static', filename='js/menu-manager.js') }}"></script>
     
     <!-- Debug Script -->
     <script>
@@ -82,7 +82,7 @@
             }, 500);
         });
         
-        // Load dynamic menu function (same as in script.js)
+        // Load dynamic menu function (same as in client.js)
         function loadDynamicMenu() {
             const menuTree = menuManager.buildMenuTree();
             console.log('Menu Tree:', menuTree);
