--- a/src/templates/client/international.html
+++ b/src/templates/client/international.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
 </head>
 <body>
     <!-- Top Bar -->
@@ -365,6 +365,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/client.js') }}"></script>
 </body>
 </html>
