--- a/src/templates/client/index.html
+++ b/src/templates/client/index.html
@@ -155,12 +155,14 @@
                     </aside>
 
                     <!-- Weather -->
-                    <aside class="sidebar-widget">
+                    <aside class="sidebar-widget weather-widget">
                         <h3 class="widget-title">
-                            <i class="fas fa-fire"></i> Xem nhiều
+                            <i class="fas fa-cloud-sun"></i> Thời tiết
                         </h3>
-                        <div class="most-read-list">
-                            <p class="text-muted text-center">Đang tải...</p>
+                        <div class="weather-content" id="weatherWidget">
+                            <div class="weather-loading">
+                                <i class="fas fa-spinner fa-spin"></i> Đang tải...
+                            </div>
                         </div>
                     </aside>
                 </div>
